fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -124,11 +124,11 @@ body {
 
 .section {
   width: 100%;
-  height: 100%;
   padding: 70px 0;
   justify-content: center;
   align-items: center;
-  overflow: scroll;
+  display: block;
+  overflow: auto;
 }
 .section:nth-child(1) {
   background: #ABCAB8;
